--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="content">
       > celeste classic glossary<br>
       <br>
-      <a href="../">back to homepage</a>
+      <a href="../Celeste-Practice-Mod">back to homepage</a>
       <br>
       <br>
       contents<hr>
